k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pativar
  labels:
    app.kubernetes.io/part-of: pativar
    app.kubernetes.io/managed-by: kubectl
